@@ -19,7 +19,7 @@ void producer(int val,IntChan &chan)
     }
   }
   chan.write(-1);
-  printf ("Producer done.\n");
+  plasma::mprintf ("Producer done.\n");
 }
 
 void consumer(IntChan &c0,IntChan &c1,IntChan &c2,IntChan &c3)
@@ -28,24 +28,24 @@ void consumer(IntChan &c0,IntChan &c1,IntChan &c2,IntChan &c3)
   while (donecount <  4) {
     alt {
       c0.port (int v) {
-        printf ("Got a value from port c0:  %d\n",v);
+        plasma::mprintf ("Got a value from port c0:  %d\n",v);
         if (v < 0) ++donecount;
       }
       c1.port (int v) {
-        printf ("Got a value from port c1:  %d\n",v);
+        plasma::mprintf ("Got a value from port c1:  %d\n",v);
         if (v < 0) ++donecount;
       }
       c2.port (int v) {
-        printf ("Got a value from port c2:  %d\n",v);
+        plasma::mprintf ("Got a value from port c2:  %d\n",v);
         if (v < 0) ++donecount;
       }
       c3.port (int v) {
-        printf ("Got a value from port c3:  %d\n",v);
+        plasma::mprintf ("Got a value from port c3:  %d\n",v);
         if (v < 0) ++donecount;
       }
     }
   }
-  printf ("Consumer done.\n");
+  plasma::mprintf ("Consumer done.\n");
 }
 
 int pMain(int argc,const char *argv[])
@@ -60,6 +60,6 @@ int pMain(int argc,const char *argv[])
     producer(10000,channels[3]);
     consumer(channels[0],channels[1],channels[2],channels[3]);
   }
-  printf ("Done.\n");
+  plasma::mprintf ("Done.\n");
   return 0;
 }
