@@ -14,7 +14,7 @@ void producer(int val,IntChan &chan)
     chan.write(val+i);
   }
   chan.write(-1);
-  printf ("Producer done.\n");
+  plasma::mprintf ("Producer done.\n");
 }
 
 void consumer(IntChan &c0)
@@ -23,18 +23,18 @@ void consumer(IntChan &c0)
   while (donecount < 1) {
     alt {
       c0.port (int v) {
-        printf ("Got a value from port c0:  %d\n",v);
+        plasma::mprintf ("Got a value from port c0:  %d\n",v);
         if (v < 0) ++donecount;
       }
       {
         for (int j = 0; j != 1000000; ++j) {
           int x = 1;
         }
-        printf ("No value present.\n");
+        plasma::mprintf ("No value present.\n");
       }
     }
   }
-  printf ("Consumer done.\n");
+  plasma::mprintf ("Consumer done.\n");
 }
 
 int pMain(int argc,const char *argv[])
@@ -45,6 +45,6 @@ int pMain(int argc,const char *argv[])
     producer(10,channel);
     consumer(channel);
   }
-  printf ("Done.\n");
+  plasma::mprintf ("Done.\n");
   return 0;
 }
