@@ -19,7 +19,7 @@ void producer(int val,IntChan &chan)
     }
   }
   chan.write(-1);
-  printf ("Producer done.\n");
+  plasma::mprintf ("Producer done.\n");
 }
 
 void consumer(ChanVect &channels)
@@ -28,12 +28,12 @@ void consumer(ChanVect &channels)
   while (donecount < (int)channels.size()) {
     afor (int i = 0; i != (int)channels.size(); ++i) {
       channels[i].port (int v) {
-        printf ("Got a value from port %d:  %d\n",i,v);
+        plasma::mprintf ("Got a value from port %d:  %d\n",i,v);
         if (v < 0) ++donecount;
       }
     }
   }
-  printf ("Consumer done.\n");
+  plasma::mprintf ("Consumer done.\n");
 }
 
 int pMain(int argc,const char *argv[])
@@ -51,6 +51,6 @@ int pMain(int argc,const char *argv[])
     }
   }
 
-  printf ("Done.\n");
+  plasma::mprintf ("Done.\n");
   return 0;
 }
