@@ -19,20 +19,20 @@ void producer(int val,int delay,IntQChan &chan)
     }
   }
   chan.write(-1);
-  printf ("Producer done.\n");
+  plasma::mprintf ("Producer done.\n");
 }
 
 void consumer(IntQChan &c)
 {
   int donecount = 0;
   while (donecount <  4) {
-    printf ("Queue size:  %d\n",c.size());
+    plasma::mprintf ("Queue size:  %d\n",c.size());
     assert(c.size() <= c.maxsize());
     int v = c.get();
-    printf ("Read a value:  %d\n",v);
+    plasma::mprintf ("Read a value:  %d\n",v);
     if (v < 0) ++donecount;
   }
-  printf ("Consumer done.\n");
+  plasma::mprintf ("Consumer done.\n");
 }
 
 int pMain(int argc,const char *argv[])
@@ -46,6 +46,6 @@ int pMain(int argc,const char *argv[])
     producer(10000,10,channel);
     consumer(channel);
   }
-  printf ("Done.\n");
+  plasma::mprintf ("Done.\n");
   return 0;
 }
