@@ -3,28 +3,31 @@
 //
 
 #include <stdio.h>
+#include "plasma.h"
 
 int pMain(int argc,const char *argv[])
 {
   const int Max = 5;
   int results[Max];
   int numblocks = 0;
+
   pfor (int i = 0,xx = 2000; i != Max; ++i,--xx) {
     for (int j = 0; j != 10; ++j) {
       int k = 0;
       for (int l = 0; l != 10000000; ++l) {
         k += 1;
       }
-      printf ("In block %d.\n",i);
+      plasma::mprintf ("In block %d.\n",i);
     }
-    printf ("Done with block %d.\n",i);
+    plasma::mprintf ("Done with block %d.\n",i);
     results[i] = xx;
     ++numblocks;
   }
-  printf ("Done with pfor.  Num blocks:  %d\n",numblocks);
+
+  plasma::mprintf ("Done with pfor.  Num blocks:  %d\n",numblocks);
   for (int i = 0; i != Max; ++i) {
-    printf ("Result[%d]:  %d, ",i,results[i]);
+    plasma::mprintf ("Result[%d]:  %d, ",i,results[i]);
   }
-  printf("\n");
+  plasma::mprintf("\n");
   return 0;
 }
