@@ -4,6 +4,8 @@
 
 #include <stdio.h>
 
+#include "plasma.h"
+
 using namespace plasma;
 
 void pSetup(ConfigParms &cp)
@@ -18,7 +20,7 @@ void delay(double x,int d = 10,int w = 10000000)
     for (int i = 0; i != w; ++i) {
       j += 1;
     }
-    printf ("In block %.1f.\n",x);
+    mprintf ("In block %.1f.\n",x);
   }
 }
 
@@ -26,7 +28,7 @@ int foo(double x,int priority)
 {
   pSetPriority(priority);
   delay(x);
-  printf ("Done with block %.1f.\n",x);
+  mprintf ("Done with block %.1f.\n",x);
   return 0;
 }
 
@@ -39,14 +41,14 @@ int pMain(int argc,const char *argv[])
       par {
         {
           delay(1.1,4);
-          printf ("Done with block 1.1.\n");
+          mprintf ("Done with block 1.1.\n");
         }
         {
           delay(1.2,4);
-          printf ("Done with block 1.2.\n");
+          mprintf ("Done with block 1.2.\n");
         }
       }
-      printf ("Done with block 1.\n");
+      mprintf ("Done with block 1.\n");
     }
     {
       pSetPriority(1);
@@ -54,26 +56,26 @@ int pMain(int argc,const char *argv[])
       par {
         {
           delay(2.1,4);
-          printf ("Done with block 2.1.\n");
+          mprintf ("Done with block 2.1.\n");
         }
         {
           delay(2.2,4);
-          printf ("Done with block 2.2.\n");
+          mprintf ("Done with block 2.2.\n");
         }
       }
-      printf ("Done with block 2.\n");
+      mprintf ("Done with block 2.\n");
     }
     {
       delay(3);
       par { foo(3.1,1); }
-      printf ("Done with block 3.\n");
+      mprintf ("Done with block 3.\n");
     }
     {
       delay(4,15);
-      printf ("Done with block 4.\n");
+      mprintf ("Done with block 4.\n");
     }
   }
-  printf ("Done.\n");
+  mprintf ("Done.\n");
   return 0;
 }
 
