@@ -6,6 +6,8 @@
 
 #include <stdio.h>
 
+#include "plasma.h"
+
 using namespace plasma;
 
 void pSetup(ConfigParms &cp)
@@ -20,7 +22,7 @@ void delay(double x,int d = 10,int w = 10000000)
     for (int i = 0; i != w; ++i) {
       j += 1;
     }
-    printf ("In block %.1f.\n",x);
+    mprintf ("In block %.1f.\n",x);
   }
 }
 
@@ -39,27 +41,27 @@ int pMain(int argc,const char *argv[])
   par {
     {
       delay(1);
-      printf ("Done with block 1.\n");
+      mprintf ("Done with block 1.\n");
     }
     {
       sdelay(2,2);
       pSetPriority(1);
       // Cheesy way to test the priority-query function.
       delay(pGetPriority()+1,30);
-      printf ("Done with block 2.\n");
+      mprintf ("Done with block 2.\n");
     }
     {
       // This should have no effect.
       pSetPriority(pLowestPriority());
       delay(pGetPriority()+3);
-      printf ("Done with block 3.\n");
+      mprintf ("Done with block 3.\n");
     }
     {
       delay(4);
-      printf ("Done with block 4.\n");
+      mprintf ("Done with block 4.\n");
     }
   }
-  printf ("Done.\n");
+  mprintf ("Done.\n");
   return 0;
 }
 
