@@ -12,6 +12,8 @@
 #include <iostream>
 #include <iomanip>
 
+#include "plasma.h"
+
 using namespace std;
 using namespace plasma;
 
@@ -46,7 +48,7 @@ void TrySpawn::start()
   Result<double> result2 = spawn(foo(2.7,9.8));
   Result<double> result3 = spawn(foo(100.45,3.59));
   Result<double> result4 = spawn(pi());
-  printf("Result is:  %f, %f, %f, %f\n",result1.value(),result2.value(),result3.value(),result4.value());
+  mprintf("Result is:  %f, %f, %f, %f\n",result1.value(),result2.value(),result3.value(),result4.value());
 }
 
 typedef double (TrySpawn::* MPtr2)(double,double);
@@ -64,13 +66,13 @@ int pMain(int,const char *[])
   Result<double> r2 = spawn(pts->foo(100.1,200.2));
   Result<double> r3 = spawn(ts.*fooptr(69,12));
   Result<double> r4 = spawn(pts->*fooptr(73,40.4));
-  printf("Result is:  %f, %f, %f, %f\n",r1.value(),r2.value(),r3.value(),r4.value());
+  mprintf("Result is:  %f, %f, %f, %f\n",r1.value(),r2.value(),r3.value(),r4.value());
   // Test of a function w/o arguments.
   Result<double> r6 = spawn(ts.e());
   Result<double> r7 = spawn(pts->e());
   Result<double> r8 = spawn(TrySpawn::pi());
   Result<double> r9 = spawn(ts.*eptr());
   Result<double> r10 = spawn(pts->*eptr());
-  printf("Result is:  %f, %f, %f, %f, %f\n",r6.value(),r7.value(),r8.value(),r9.value(),r10.value());
+  mprintf("Result is:  %f, %f, %f, %f, %f\n",r6.value(),r7.value(),r8.value(),r9.value(),r10.value());
   return 0;
 }
